Added methods to help turning items to text glyphs for a number of interface uses.
 => Found on InterfaceHelper class.
Pushed update again to see if steam updates it on clients.